--- a/frontend/src/Pages/Login/styles.scss
+++ b/frontend/src/Pages/Login/styles.scss
@@ -1,22 +1,28 @@
 @import '@/assets/scss/_main';
 
-.login {
-    width: 100%;
-    display: flex;
-    justify-content: center;
 
-    .login-card {
-        width: 200px;
-        height: 300px;
-        background-color: $blue;
-        border-radius: 5px;
-        margin-top: 100px;
-        padding: 20px;
-        box-shadow: 7px 7px 7px grey;
+#login-card {
+    width: 250px;
+    height: 200px;
+    margin: 100px auto;
+    padding: 20px;
+    background-color: $blue;
+    border-radius: 5px;
+    box-shadow: 7px 7px 7px grey;
+    border: none;
+    
+    .login-header {
+        width: 100%;
 
-        header {
-            width: 100%;
-            margin-bottom: 10px;
+        h1 {
+            font-size: 30px;
+            color: $white;
         }
+    }
+
+    .btn-login {
+        height: 35px;
+        background-color: $darkblue;
+        color: $white;
     }
 }
