--- a/frontend/src/assets/scss/_main.scss
+++ b/frontend/src/assets/scss/_main.scss
@@ -1,31 +1,10 @@
 @import './colors';
 
-main {
+#body {
     background-color: $yellow;
-    height: 100vh;
-    
-    .nav {
-        background-color: $blue;
-        display: flex;
-        height: 120px;
 
-        ul {
-            margin-top: 50px;
-            padding-left: 50px;
-            list-style: none;
-
-            .nav-link {
-                color: $white;
-                text-decoration: none;
-            }
-        }
-    }
-
-    .input-text{
-        border-radius: 4px;
-        height: 25px;
-        border: 1px $grey solid;
-        margin: 3px;
-        padding: 3px;
+    .form-control{
+        margin-bottom: 10px;
+        height: 30px;
     }
 }
