--- a/frontend/src/assets/scss/_main.scss
+++ b/frontend/src/assets/scss/_main.scss
@@ -1,4 +1,5 @@
 @import './colors';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 #body {
     background-color: $yellow;
