--- a/frontend/src/Pages/Product/style.scss
+++ b/frontend/src/Pages/Product/style.scss
@@ -11,6 +11,10 @@ main {
 
         .container {
 
+            .breadcrumb {
+                margin-top: 20px;
+            }
+
             .card {
                 border: none;
                 box-shadow: 1px 1px 1px 2px grey;
