--- a/frontend/src/Pages/Navbar/style.scss
+++ b/frontend/src/Pages/Navbar/style.scss
@@ -4,9 +4,8 @@
 nav {
     width: 100%;
     height: 50px;
-    background-color: $blue;
-    filter: brightness(90%);    
-
+    background-color: $navbar;
+    
     button {
         background-color: transparent;
         border: none;
