--- a/frontend/src/Pages/Dashboard/style.scss
+++ b/frontend/src/Pages/Dashboard/style.scss
@@ -11,15 +11,15 @@ main {
 
         .container {
 
-            .card {
-                border: none;
-                box-shadow: 1px 1px 1px 2px grey;
-                padding: 20px;
-                margin-top: 10px;
-                max-height: 80vh;
-                overflow-y: scroll;
-                background-color: $pastel;
-            }
+            // .card {
+            //     border: none;
+            //     box-shadow: 1px 1px 1px 2px grey;
+            //     padding: 20px;
+            //     margin-top: 10px;
+            //     max-height: 80vh;
+            //     overflow-y: scroll;
+            //     background-color: $pastel;
+            // }
         }
 
     }
