--- a/frontend/src/Pages/Product/style.scss
+++ b/frontend/src/Pages/Product/style.scss
@@ -15,7 +15,7 @@ main {
                 margin-top: 20px;
             }
 
-            .card {
+            /*.card {
                 border: none;
                 box-shadow: 1px 1px 1px 2px grey;
                 padding: 20px;
@@ -23,7 +23,7 @@ main {
                 max-height: 80vh;
                 overflow-y: scroll;
                 background-color: $pastel;
-            }
+            }*/
         }
 
     }
