--- a/frontend/src/Pages/Navbar/style.scss
+++ b/frontend/src/Pages/Navbar/style.scss
@@ -5,6 +5,8 @@ nav {
     width: 100%;
     height: 50px;
     background-color: $navbar;
+    // position: fixed;
+    // z-index: 1;
     
     button {
         background-color: transparent;
