--- a/frontend/src/Pages/List/style.scss
+++ b/frontend/src/Pages/List/style.scss
@@ -1,13 +1,34 @@
 @import '@/assets/scss/main';
 
-ul {
-    list-style: none;
-    padding: 0px;
+.data_length {
+    background-color: $darkblue;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 8px;
+    color: $white;
+    box-shadow: 1px 1px 1px grey;
+}
 
-    .card {
-        padding: 15px;
+table {
+    background-color: $blue;
+    color: $white;
+    text-shadow: 1px 1px 2px black;
+
+    thead {
         background-color: $darkblue;
+
+        tr th {
+            white-space: nowrap;
+        }
+    }
+
+    th, td {
+        white-space: nowrap;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    tr:hover td {
         color: $white;
-        text-shadow: 1px 1px 2px black;
     }
 }
